--- a/footer.css
+++ b/footer.css
@@ -247,5 +247,12 @@ a:active{
 }
 
 @media only screen and (max-width: 768px) {
+  :root{
+    --H1 : 30px;
+  }
+
+  .heroTitle{
+    font-size: 40px;
+  }
  
 }
