--- a/footer.css
+++ b/footer.css
@@ -115,7 +115,7 @@ ul li {
 .ellips {
   position: absolute;
   bottom: 0;
-  z-index: 1000;
+  z-index: -1;
   width: 100%;
 }
 
@@ -157,11 +157,11 @@ ul li {
 .mobileSidebar{
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.722);
+    background-color: rgb(0, 0, 0);
     position: fixed;
     top: 0;
     z-index: 100000;
-    backdrop-filter: blur(4px);
+    opacity: .8;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -252,7 +252,10 @@ a:active{
   }
 
   .heroTitle{
-    font-size: 40px;
+    font-size: 27px;
+  }
+  ul li{
+    font-size: 15px;
   }
  
 }
