--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
   --Caption  : 20px;
 }
 
+
+.heading{
+  font-size: 40px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -468,7 +473,6 @@ pre {
 }
 
 .processTitle {
-  font-size: var(--H1);
   line-height: 48px;
   text-align: center;
   letter-spacing: -3%;
